feat: load data from remote json file

--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "scripts": {
     "build": "remix build && ncc build ./build/index.js",
     "dev": "remix dev",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "tidy": "xo --fix ./app"
   },
   "dependencies": {
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "3.19.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
@@ -20,7 +22,8 @@
     "@types/react-dom": "^18.0.6",
     "@vercel/ncc": "0.34.0",
     "eslint": "^8.20.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "xo": "0.52.3"
   },
   "engines": {
     "node": ">=14"
