--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@remix-run/serve": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "3.19.0"
+    "zod": "3.19.0",
+    "@stayradiated/error-boundary": "4.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
@@ -27,5 +28,25 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "xo": {
+    "space": true,
+    "semicolon": false,
+    "prettier": true,
+    "rules": {
+      "import/extensions": "off",
+      "@typescript-eslint/naming-convention": "off",
+      "n/file-extension-in-import": "off"
+    }
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false
   }
 }
