--- a/.github/workflows/build.workflow.yml
+++ b/.github/workflows/build.workflow.yml
@@ -26,7 +26,7 @@ jobs:
         name: Install PNPM
         uses: pnpm/action-setup@v2.2.2
         with:
-          version: 7.9.0
+          version: latest
           run_install: false
 
       -
@@ -52,7 +52,7 @@ jobs:
       - 
         name: Compile Typescript Packages
         run: |
-          pnpm run build
+          pnpm run package
 
       -
         # https://github.com/docker/metadata-action
