--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "tidy": "xo --fix --plugin=react ./app"
   },
   "dependencies": {
-    "@remix-run/express": "1.12.0",
-    "@remix-run/node": "1.12.0",
-    "@remix-run/react": "1.12.0",
+    "@remix-run/express": "1.13.0",
+    "@remix-run/node": "1.13.0",
+    "@remix-run/react": "1.13.0",
     "@stayradiated/error-boundary": "4.1.0",
     "compression": "1.7.4",
     "express": "4.18.2",
@@ -20,10 +20,11 @@
     "zod": "3.20.6"
   },
   "devDependencies": {
-    "@remix-run/dev": "1.12.0",
-    "@remix-run/eslint-config": "1.12.0",
+    "@remix-run/dev": "1.13.0",
+    "@remix-run/eslint-config": "1.13.0",
+    "@remix-run/serve": "1.13.0",
     "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.10",
+    "@types/react-dom": "18.0.11",
     "@vercel/ncc": "0.36.1",
     "eslint": "8.34.0",
     "typescript": "4.9.5",
